Set mouse mode as default for tmux.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -47,3 +47,5 @@ set-option -g display-panes-colour colour166 #orange
 # Window Management
 # -----------------------------------------------------------------------------
 set-option -g renumber-windows on
+
+set -g mode-mouse on
