Adding shortcuts for swapping windows.
http://superuser.com/a/552493

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -43,7 +43,7 @@ set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
-# -----------------------------------------------------------------------------
-# Window Management
-# -----------------------------------------------------------------------------
+# window management
 set-option -g renumber-windows on
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
