--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -47,3 +47,6 @@ set-option -g display-panes-colour colour166 #orange
 set-option -g renumber-windows on
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+# This delay slows down the escaping insert mode from vim.
+set -s escape-time 0
