Sync vimrc and tmux.conf from other workstation.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,11 +1,6 @@
 set-option -g default-shell /bin/zsh
 
-# Setting scrollback history to some huge number bc you know you want it
 set -g history-limit 1000000
-
-# -----------------------------------------------------------------------------
-# Solarized theme
-# -----------------------------------------------------------------------------
 set -g status-right '#H'
 
 # default statusbar colors
@@ -22,12 +17,12 @@ set-window-option -g status-right-fg black
 set-window-option -g status-right-bg white
 
 # default window title colors
-set-window-option -g window-status-fg green
+set-window-option -g window-status-fg white
 set-window-option -g window-status-bg black
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-format " #I: #W "
+set-window-option -g window-status-current-format " #I:#W "
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
 
@@ -45,8 +40,15 @@ set-option -g display-panes-colour colour166 #orange
 
 # window management
 set-option -g renumber-windows on
+bind c new-window -c "#{pane_current_path}"
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-# This delay slows down the escaping insert mode from vim.
-set -s escape-time 0
+bind-key -n C-Left previous-window
+bind-key -n C-Right next-window
+
+# pane management
+bind-key -n M-Left select-pane -L
+bind-key -n M-Right select-pane -R
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
