Fix spacing in tmux status bar.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -8,7 +8,7 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg green
 set-option -g status-attr default
 
-set-window-option -g status-left " #S "
+set-window-option -g status-left " #S #[bg=colour235] "
 set-window-option -g status-left-fg black
 set-window-option -g status-left-bg white
 
@@ -17,6 +17,7 @@ set-window-option -g status-right-fg black
 set-window-option -g status-right-bg white
 
 # default window title colors
+set-window-option -g window-status-format " #I:#W "
 set-window-option -g window-status-fg white
 set-window-option -g window-status-bg black
 set-window-option -g window-status-attr dim
