--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -5,7 +5,7 @@ set -g status-right '#H'
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
-set-option -g status-fg green
+set-option -g status-fg white
 set-option -g status-attr default
 
 set-window-option -g status-left " #S #[bg=colour235] "
