--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -4,36 +4,28 @@ set -g history-limit 1000000
 set -g status-right '#H'
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg white
-set-option -g status-attr default
+set -g status-style bg=colour235,fg=white
 
 set-window-option -g status-left " #S #[bg=colour235] "
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg white
+set-window-option -g status-left-style bg=white,fg=black
 
 set-window-option -g status-right " %H:%M %d-%b-%y "
-set-window-option -g status-right-fg black
-set-window-option -g status-right-bg white
+set-window-option -g status-right-style bg=white,fg=black
 
 # default window title colors
 set-window-option -g window-status-format " #I:#W "
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg black
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style bg=black,fg=white,dim
 
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg $THEME_COLOR
+set-window-option -g window-status-current-style bg=$THEME_COLOR,fg=black
 
 # pane border
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg $THEME_COLOR
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=$THEME_COLOR
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
