Prevent git pager from activating.

--- a/stows/git/.gitconfig
+++ b/stows/git/.gitconfig
@@ -1,7 +1,14 @@
 [core]
 	editor = vim
+
 [user]
 	email = trironk@gmail.com
 	name = trironkk
+
 [status]
 	submoduleSummary = true
+
+[pager]
+	diff = false
+	log = false
+	status = false
