--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -9,7 +9,7 @@ set -g status-style bg=colour235,fg=white
 set-window-option -g status-left " #S #[bg=colour235] "
 set-window-option -g status-left-style bg=white,fg=black
 
-set-window-option -g status-right " %H:%M %d-%b-%y "
+set-window-option -g status-right " %Y-%m-%d %H:%M "
 set-window-option -g status-right-style bg=white,fg=black
 
 # default window title colors
