--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -18,11 +18,11 @@ set-window-option -g window-status-style bg=black,fg=white,dim
 
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
-set-window-option -g window-status-current-style bg=$THEME_COLOR,fg=black
+set-window-option -g window-status-current-style bg=green,fg=black
 
 # pane border
 set-option -g pane-border-style fg=white
-set-option -g pane-active-border-style fg=$THEME_COLOR
+set-option -g pane-active-border-style fg=green
 
 # message text
 set-option -g message-style bg=colour235,fg=colour166
