--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -4,32 +4,33 @@ set -g history-limit 1000000
 set -g status-right '#H'
 
 # default statusbar colors
-set -g status-style bg=colour235,fg=white
+set -g status-style bg=colour235,fg=yellow
 
 set-window-option -g status-left " #S #[bg=colour235] "
-set-window-option -g status-left-style bg=white,fg=black
+set-window-option -g status-left-style bg=yellow,fg=black
 
 set-window-option -g status-right " %Y-%m-%d %H:%M "
-set-window-option -g status-right-style bg=white,fg=black
+set-window-option -g status-right-style bg=yellow,fg=black
 
 # default window title colors
 set-window-option -g window-status-format " #I:#W "
-set-window-option -g window-status-style bg=black,fg=white,dim
+set-window-option -g window-status-style bg=black,fg=yellow,dim
 
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
-set-window-option -g window-status-current-style bg=white,fg=black
+set-window-option -g window-status-current-style bg=yellow,fg=black
 
 # pane border
-set-option -g pane-border-style fg=white
-set-option -g pane-active-border-style fg=white
+set-option -g pane-border-style fg=yellow
+set-option -g pane-active-border-style fg=yellow
+set-window-option -g window-status-current-style bg=yellow,fg=black
 
 # message text
 set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-colour colour166 #yellow
 
 # window management
 set-option -g renumber-windows on
