--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -4,33 +4,33 @@ set -g history-limit 1000000
 set -g status-right '#H'
 
 # default statusbar colors
-set -g status-style bg=colour235,fg=yellow
+set -g status-style bg=colour235,fg=green
 
 set-window-option -g status-left " #S #[bg=colour235] "
-set-window-option -g status-left-style bg=yellow,fg=black
+set-window-option -g status-left-style bg=green,fg=black
 
 set-window-option -g status-right " %Y-%m-%d %H:%M "
-set-window-option -g status-right-style bg=yellow,fg=black
+set-window-option -g status-right-style bg=green,fg=black
 
 # default window title colors
 set-window-option -g window-status-format " #I:#W "
-set-window-option -g window-status-style bg=black,fg=yellow,dim
+set-window-option -g window-status-style bg=black,fg=green,dim
 
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
-set-window-option -g window-status-current-style bg=yellow,fg=black
+set-window-option -g window-status-current-style bg=green,fg=black
 
 # pane border
-set-option -g pane-border-style fg=yellow
-set-option -g pane-active-border-style fg=yellow
-set-window-option -g window-status-current-style bg=yellow,fg=black
+set-option -g pane-border-style fg=green
+set-option -g pane-active-border-style fg=green
+set-window-option -g window-status-current-style bg=green,fg=black
 
 # message text
 set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #yellow
+set-option -g display-panes-colour colour166 #green
 
 # window management
 set-option -g renumber-windows on
