--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g default-shell /bin/zsh
+set-option -g default-terminal "screen-256color"
 
 set -g history-limit 1000000
 set -g status-right '#H'
@@ -19,6 +20,9 @@ set-window-option -g window-status-style bg=black,fg=green,dim
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
 set-window-option -g window-status-current-style bg=green,fg=black
+
+# https://github.com/neovim/neovim/wiki/Building-Neovim#optimized-builds
+set-option -sg escape-time 10
 
 # pane border
 set-option -g pane-border-style fg=green
