--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stows/fzf/.fzf"]
 	path = stows/fzf/.fzf
 	url = https://github.com/junegunn/fzf
+[submodule "stows/tmux/.tmux/plugins/tpm"]
+	path = stows/tmux/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
