--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -27,7 +27,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, or mocha
+set -g @catppuccin_flavour 'latte' # latte, frappe, macchiato, or mocha
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
