--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -6,6 +6,9 @@ set-option -g status-position top
 set -g history-limit 1000000
 set -g status-right '#H'
 
+# https://github.com/christoomey/vim-tmux-navigator?tab=readme-ov-file#restoring-clear-screen-c-l
+bind C-l send-keys 'C-l'
+
 # https://github.com/neovim/neovim/wiki/Building-Neovim#optimized-builds
 set-option -sg escape-time 10
 
