--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -6,6 +6,16 @@ set-option -g status-position top
 set -g history-limit 1000000
 set -g status-right '#H'
 
+set -g update-environment "\
+DISPLAY \
+KRB5CCNAME \
+SSH_ASKPASS \
+SSH_AUTH_SOCK \
+SSH_AGENT_PID \
+SSH_CONNECTION \
+WINDOWID \
+XAUTHORITY"
+
 # https://github.com/christoomey/vim-tmux-navigator?tab=readme-ov-file#restoring-clear-screen-c-l
 bind C-l send-keys 'C-l'
 
@@ -50,3 +60,14 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run "$HOME/.tmux/plugins/tpm/tpm"
+
+set -g focus-events on
+
+# Set up active/inactive pane styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
+# Set up pane border colors
+set -g pane-border-style "fg=colour235,bg=colour238"
+set -g pane-active-border-style "fg=colour245,bg=black"
+
